--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,6 +1,14 @@
 
 set(MAIN_SRC
   main.cpp
+  delivery.h
+  luggage.h
+  heavyluggagedelivery.h
+  heavyluggagedelivery.cpp
+  mediumluggagedelivery.h
+  mediumluggagedelivery.cpp
+  lightluggagedelivery.h
+  lightluggagedelivery.cpp
 )
 
 add_executable(
